--- a/KaranSinMorsommeFerie/Uke_41/a.css
+++ b/KaranSinMorsommeFerie/Uke_41/a.css
@@ -3,6 +3,7 @@ body {
 	background: #222;
 	font-family: 'Work Sans', sans-serif;
 	font-weight: 800;
+	color: white;
 }
 
 .container {
@@ -73,4 +74,10 @@ nav a::before {
 
 nav a:hover::before {
   width: 100%;
+}
+#ola{
+	text-align: center;
+	color: white;
+	background-color: blue;
+	margin-left: 500PX;
 }
