--- a/KaranSinMorsommeFerie/Nettside/main.css
+++ b/KaranSinMorsommeFerie/Nettside/main.css
@@ -3,7 +3,8 @@ body {
 	background: #222;
 	font-family: 'Work Sans', sans-serif;
 	font-weight: 800;
-	color: white;
+	color: black;
+background-image:url("matin.jpg");
 }
 
 .container {
@@ -76,12 +77,85 @@ nav a:hover::before {
   width: 100%;
 }
 #ola{
-
-	color: white;
+color: white;
 	background-color: blue;
-	margin: 250px;
-	font-size: 25px;
-	border-radius: 5px;
+	margin: 350px;
+	font-size: 11px;
+	border-radius: 15px;
 	border-color: white;
 	padding: 10px;
+
+}
+main{
+	padding:110px;
+	background-color: salmon;
+	margin: 80px;
+	border-style: solid;
+	border-radius: 20px;
+	text-align: center;
+}
+section{
+  display: grid;
+  grid-gap: 4px;
+  /*grid-template-columns: 40px 40px 40px*/
+  /*grid-template-columns: 1fr 1fr 1fr 1fr;*/
+  grid-template-columns: repeat(8, 1fr);
+  /*grid-auto-rows: minmax(40px,auto);*/
+  grid-auto-rows: 70px;
+
+
+
+}
+.span-2{
+  grid-column: span 6;
+}
+.usynlig{
+  opacity: 0;
+}
+/*.span-2{
+grid-row: span 3;
+}*/
+.tall{
+  background-color: lightgrey;
+  margin-right: 18px;
+  margin-left: 10px;
+}
+.o{
+  background-color: darkorange;
+}
+.l{
+  background-color: purple;
+}
+.b{
+  background-color: blue;
+}
+.y{
+  background-color: #ffff00;
+}
+.g{
+  background-color: green;
+}
+.grunnstoff{
+
+}
+div.o:hover{
+background-color: white;
+padding:15px;
+}
+div.g:hover{
+background-color: white;
+padding:15px;
+}
+div.l:hover{
+background-color: white;
+padding:15px;
+}
+div.y:hover{
+background-color: white;
+padding:15px;
+}
+
+div.b:hover{
+background-color: white;
+padding:15px;
 }
