--- a/KaranSinMorsommeFerie/Nettside/main.css
+++ b/KaranSinMorsommeFerie/Nettside/main.css
@@ -4,7 +4,7 @@ body {
 	font-family: 'Work Sans', sans-serif;
 	font-weight: 800;
 	color: black;
-background-image:url("matin.jpg");
+background-image: linear-gradient(red, yellow, green);
 }
 
 .container {
@@ -12,8 +12,13 @@ background-image:url("matin.jpg");
 	margin: 0 auto;
 }
 
+
 header {
   background: #55d6aa;
+margin: 0;
+	  border-top: 1px solid green !important;
+	  margin-top: -1px !important;
+
 }
 
 header::after {
@@ -23,8 +28,8 @@ header::after {
 }
 
 .logo {
-  float: left;
-padding-top: 5px;
+
+width: 300px;
 
 }
 
@@ -79,22 +84,31 @@ nav a:hover::before {
 #ola{
 color: white;
 	background-color: blue;
-	margin: 350px;
-	font-size: 11px;
+	margin-left: 420px;
+	font-size: 19px;
 	border-radius: 15px;
 	border-color: white;
 	padding: 10px;
+	text-decoration: none;
+
+
+
 
 }
-main{
+main>.periodiske{
 	padding:110px;
 	background-color: salmon;
 	margin: 80px;
+	margin-left: 100px;
+	margin-right: 100px;
 	border-style: solid;
-	border-radius: 20px;
+	border-radius: 60px;
+text-align: center;
+}
+h1{
 	text-align: center;
 }
-section{
+.periodiske{
   display: grid;
   grid-gap: 4px;
   /*grid-template-columns: 40px 40px 40px*/
@@ -102,7 +116,6 @@ section{
   grid-template-columns: repeat(8, 1fr);
   /*grid-auto-rows: minmax(40px,auto);*/
   grid-auto-rows: 70px;
-
 
 
 }
@@ -158,4 +171,36 @@ padding:15px;
 div.b:hover{
 background-color: white;
 padding:15px;
+}
+
+
+main>.nyhet{
+	display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-gap: 5px;
+  grid-auto-rows: minmax(100px, auto);
+  padding: 5px 70px;
+}
+img {
+	  width: 100%;
+	  height: 40%;
+}
+
+.middelssak {
+  grid-column: span 2;
+  grid-row: span 2;
+
+}
+
+.storsak {
+  grid-column: span 3;
+  grid-row: span 3;
+
+}
+
+.nyhet>section {
+  background-color: white;
+  border-style:solid;
+  border-color: black;
+
 }
