--- a/KaranSinMorsommeFerie/Uke_44/nettavis/hoved.css
+++ b/KaranSinMorsommeFerie/Uke_44/nettavis/hoved.css
@@ -1,11 +1,13 @@
 body {
-  background-color: black;
   font-family: century, sans-serif;
   font-weight: bold;
   margin: 0;
-  position: fixed;
   top: 0px;
   width: 100%;
+  border-style: solid;
+  border-color: black;
+ background-image: linear-gradient(red, yellow, green);
+
 }
 
 header {
@@ -21,6 +23,7 @@ header {
   font-weight: bold;
   padding: 3px;
   padding-left: 49px;
+
 }
 
 header>.lenke {
@@ -38,9 +41,7 @@ header>.lenke>a {
 overflow: scroll;
 }
 
-.lenke{
-overflow: scroll;
-}
+
 
 main {
   display: grid;
@@ -48,17 +49,18 @@ main {
   grid-gap: 5px;
   grid-auto-rows: minmax(100px, auto);
   padding: 5px 70px;
+
 }
 
 img {
   width: 100%;
-  height: 90%;
+  height: 40%;
 }
 
 .middelssak {
   grid-column: span 2;
   grid-row: span 2;
-  background-color: blue;;
+
 }
 
 .storsak {
@@ -69,4 +71,6 @@ img {
 
 main>section {
   background-color: white;
+  border-style:solid;
+  border-color: black;
 }
