--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/main.css
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/main.css
@@ -3,7 +3,7 @@ body{
   top: 0px;
 }
 header {
-  background-color: grey;
+  background-color: #c6e0de;
   text-align: center;
   display: grid;
   grid-template-columns: repeat(12,1fr);
@@ -13,7 +13,8 @@ header {
   text-transform: uppercase;
   font-size: 20px;
   font-weight: bold;
-  padding: 3px;
+
+
 
 }
 
@@ -24,20 +25,21 @@ header>.lang{
   text-transform: lowercase;
   text-decoration: underline;
   font-style: italic;
+
 }
-header>.lang>a{
-  margin-right: 40px;
-}
+
 
 mark{
   color: blue;
 }
 
 header>.logginn{
-background-color: white;
+background-color:white;
 font-size: 13px;
 margin: 10px;
 border-radius: 5px;
+
+
 
 }
 .logginnbilde{
@@ -62,19 +64,78 @@ header>.lenke {
 .logo {
   width: 200px;
   height: 80px;
-  padding-left: 10px;
-  padding-top: 5px;
+  padding-top:8px;
+  padding-left: 25px;
+  padding-bottom: 2px;
   grid-column: span 1;
   margin-left: 50px;
-
-
 }
 
 header>.lenke>a {
   color: black;
   text-decoration: none;
 overflow: scroll;
+padding: 4px;}
+
+header>.lenke>a:hover{
+color: darkgrey;
+text-decoration: underline;
+transition: all ease-in-out 450ms;
 }
+
 header>.damherbar{
   grid-column: span 4;
+  font-size: 22px;
+}
+
+/*Main*/
+
+
+nav{
+  background-color: #b8d0ce;
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  padding-top: 20px;
+    padding-bottom:20px;
+}
+nav>.klesvalg{
+grid-column: span 2;
+}
+nav>.klesvalg>a{
+padding: 12px;
+color: black;
+text-decoration: none;
+text-transform: uppercase;
+font-style: normal;
+font-family:monospace,inherit,serif;
+font-weight: bold;
+font-size: 18px;
+}
+nav>.klesvalg>a:hover{
+  color: darkgrey;
+  text-decoration: underline;
+  transition: all ease-in-out 400ms;
+}
+
+nav>.denusynlig{
+  grid-column:span 1;
+}
+
+nav>.søkemotor{
+  grid-column: span 1;
+
+
+}
+nav>.søkemotor>[type=text]{
+  font-size: 15px;
+  border-radius: 10px;
+   border: 1px solid;
+   padding: 5px;
+}
+nav>.søkemotor>[type=submit]{
+ border: 1px solid;
+ border-radius: 9px;
+ padding: 5px;
+
 }
