--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/main.css
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/main.css
@@ -1,24 +1,20 @@
-body{
+body {
   margin: 0px;
   top: 0px;
 }
+
 header {
   background-color: #c6e0de;
   text-align: center;
   display: grid;
-  grid-template-columns: repeat(12,1fr);
-  text-decoration: none;
-
+  grid-template-columns: repeat(12, 1fr);
   text-decoration: none;
   text-transform: uppercase;
   font-size: 20px;
   font-weight: bold;
-
-
-
 }
 
-header>.lang{
+header>.lang {
   grid-column: span 12;
   background-color: white;
   color: black;
@@ -26,36 +22,30 @@ header>.lang{
   text-decoration: underline;
   font-style: normal;
   font-weight: lighter;
-
 }
 
-
-mark{
+mark {
   color: blue;
 }
 
-header>.logginn{
-background-color:white;
-font-size: 13px;
-margin: 10px;
-border-radius: 5px;
-display: inline-block;
+header>.logginn {
+  background-color: white;
+  font-size: 13px;
+  margin: 10px;
+  border-radius: 5px;
+  display: inline-block;
 }
 
-
-
-.logginnbilde{
+.logginnbilde {
   width: 30px;
-
-
 }
 
-header>.usynlig{
+header>.usynlig {
   grid-column: span 4;
 }
-.usynlig1{
-  grid-column: span 1;
 
+.usynlig1 {
+  grid-column: span 1;
 }
 
 header>.lenke {
@@ -66,7 +56,7 @@ header>.lenke {
 .logo {
   width: 200px;
   height: 80px;
-  padding-top:8px;
+  padding-top: 8px;
   padding-left: 25px;
   padding-bottom: 2px;
   grid-column: span 1;
@@ -76,69 +66,101 @@ header>.lenke {
 header>.lenke>a {
   color: black;
   text-decoration: none;
-overflow: scroll;
-padding: 4px;}
-
-header>.lenke>a:hover{
-color: darkgrey;
-text-decoration: underline;
-transition: all ease-in-out 450ms;
+  overflow: scroll;
+  padding: 4px;
 }
 
-header>.damherbar{
+header>.lenke>a:hover {
+  color: darkgrey;
+  text-decoration: underline;
+  transition: all ease-in-out 450ms;
+}
+
+header>.damherbar {
   grid-column: span 4;
   font-size: 22px;
 }
 
 /*Main*/
-
-
-nav{
+nav {
   background-color: #b8d0ce;
   text-align: center;
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
   padding-top: 20px;
-    padding-bottom:20px;
+  padding-bottom: 20px;
 }
-nav>.klesvalg{
-grid-column: span 2;
+
+nav>.klesvalg {
+  grid-column: span 2;
 }
-nav>.klesvalg>a{
-padding: 12px;
-color: black;
-text-decoration: none;
-text-transform: uppercase;
-font-style: normal;
-font-family:monospace,inherit,serif;
-font-weight: bold;
-font-size: 18px;
+
+nav>.klesvalg>a {
+  padding: 12px;
+  color: black;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-style: normal;
+  font-family: monospace, inherit, serif;
+  font-weight: bold;
+  font-size: 18px;
 }
-nav>.klesvalg>a:hover{
+
+nav>.klesvalg>a:hover {
   color: darkgrey;
   text-decoration: underline;
   transition: all ease-in-out 400ms;
 }
 
-nav>.denusynlig{
-  grid-column:span 1;
-}
-
-nav>.søkemotor{
+nav>.denusynlig {
   grid-column: span 1;
-
-
 }
-nav>.søkemotor>[type=text]{
+
+nav>.søkemotor {
+  grid-column: span 1;
+}
+
+nav>.søkemotor>[type=text] {
   font-size: 15px;
   border-radius: 10px;
-   border: 1px solid;
-   padding: 5px;
+  border: 1px solid;
+  padding: 5px;
 }
-nav>.søkemotor>[type=submit]{
- border: 1px solid;
- border-radius: 9px;
- padding: 5px;
- margin-right: 0px;
 
+nav>.søkemotor>[type=submit] {
+  border: 1px solid;
+  border-radius: 9px;
+  padding: 5px;
+  margin-right: 0px;
+}
+
+.Hoved_grid{
+  background-color: red;
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 28px;
+  font-weight: bold;
+grid-column: span 1;
+
+}
+.nr1{
+background-color: blue;
+}
+.nr2{
+background-color: green;
+}
+.nr3{
+background-color: yellow;
+}
+.nr4{
+background-color: red;
+}
+>.bilde1{
+  width: 30px;
+}
+.reklame1{
+  
 }
