--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/main.css
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/main.css
@@ -3,6 +3,8 @@ body {
   top: 0px;
 }
 
+
+
 header {
   background-color: #c6e0de;
   text-align: center;
@@ -80,6 +82,69 @@ header>.damherbar {
   font-size: 22px;
 }
 
+header{
+ overflow: hidden;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+}
+main{
+margin-top:100px;
+}
+
+.navigation a {
+  float: left;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.dropned {
+  float: left;
+  overflow: hidden;
+}
+
+.dropned .dropknapp {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: black;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.dropned-content {
+  display: none;
+  position: absolute;
+  background-color: grey;
+}
+
+.dropned-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropned-content a:hover {
+  background-color: #ddd;
+  text-decoration: underline;
+}
+
+.dropned:hover .dropned-content {
+  display: block;
+}
+
 /*Main*/
 nav {
   background-color: #b8d0ce;
@@ -89,6 +154,9 @@ nav {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
+
+
 
 nav>.klesvalg {
   grid-column: span 2;
@@ -117,6 +185,7 @@ nav>.denusynlig {
 
 nav>.søkemotor {
   grid-column: span 1;
+  margin-top: 10px;
 }
 
 nav>.søkemotor>[type=text] {
@@ -133,29 +202,32 @@ nav>.søkemotor>[type=submit] {
   margin-right: 0px;
 }
 
-
-main{
-  background-color:#fff2ea;
-
+main {
+  background-image: url(../bilder/stj_bak.jpg);
+  background-repeat: no-repeat;
+   background-attachment: fixed;
 }
 
+
+
 .reklame1 {
-  height: 400px;
   background-image: url(../bilder/logo.psd);
+  height: 400px;
   transition: 0.4s;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  margin-top: 20px;
-  margin: 10px 0px;
+
+  width: 100%
 }
 
 .reklame1:hover {
-  background-image: url(../bilder/united.jpg);
+
+background-image: url(../bilder/united.jpg);
+
 }
 
 .Hoved_grid {
-  background-color: white;
   text-align: center;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -164,20 +236,15 @@ main{
   font-size: 28px;
   font-weight: bold;
   margin: 20px 50px;
-  background-color:#fff2ea;
 
 }
 
-.nr1 .nr2 .nr3 {
-
-}
-
-
+.nr1 .nr2 .nr3 {}
 
 main>h1 {
-  color: grey;
+  color: lightgrey;
   margin-left: 60px;
-  margin-top: 75px;
+  margin-top: 25px;
   margin-bottom: 0px;
   text-decoration: none;
   text-transform: uppercase;
@@ -190,7 +257,7 @@ main>h2 {
   margin-top: 5px;
   margin-bottom: 15px;
   margin-bottom: 0px;
-  color: black;
+  color: white;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 20px;
@@ -207,9 +274,7 @@ main>.nyheter_hoved {
   font-size: 28px;
   font-weight: bold;
   margin: 0px 50px;
-   background-color:#fff2ea;
-
-
+  background-color: #fff2ea;
 }
 
 .nyheter_index {
@@ -219,15 +284,16 @@ main>.nyheter_hoved {
   border-color: grey;
   border-radius: 5px;
   margin: 20px 15px;
-  
+}
 
+.nyheter_index:hover {
+  margin-top: 1px;
 }
 
 .bilde {
-margin: 0px;
+  margin: 0px;
   grid-column: span 1;
   width: 100%;
-
 }
 
 .Merke {
@@ -272,7 +338,6 @@ margin: 0px;
   background-color: white;
 }
 
-
 .reklame2 {
   height: 300px;
   background-image: url(../bilder/logo.psd);
@@ -288,18 +353,31 @@ margin: 0px;
   background-image: url(../bilder/united.jpg);
 }
 
-
 .hele_footer {
   background-color: black;
   color: white;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   text-decoration: none;
   font-size: 14px;
   font-weight: normal;
   padding: 30px 100px;
 }
+.sosbilder{
+  width: 40px;
+  height: 40px;
+  border-radius: 15px;
+  margin: 15px;
+}
 
 thead {
   text-decoration: underline;
+  font-size: 18px;
+}
+tbody{
+  font-style: normal;
+  font-size: 12px;
+  font-family: monospace;
+  font-weight: lighter;
+  text-transform: lowercase;
 }
