--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/a HERRE/herre.css
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/a HERRE/herre.css
@@ -3,6 +3,8 @@ body {
   top: 0px;
 }
 
+
+
 header {
   background-color: #c6e0de;
   text-align: center;
@@ -80,6 +82,69 @@ header>.damherbar {
   font-size: 22px;
 }
 
+header{
+ overflow: hidden;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+}
+main{
+margin-top:100px;
+}
+
+.navigation a {
+  float: left;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.dropned {
+  float: left;
+  overflow: hidden;
+}
+
+.dropned .dropknapp {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: black;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.dropned-content {
+  display: none;
+  position: absolute;
+  background-color: grey;
+}
+
+.dropned-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropned-content a:hover {
+  background-color: #ddd;
+  text-decoration: underline;
+}
+
+.dropned:hover .dropned-content {
+  display: block;
+}
+
 /*Main*/
 nav {
   background-color: #b8d0ce;
@@ -89,6 +154,9 @@ nav {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
+
+
 
 nav>.klesvalg {
   grid-column: span 2;
@@ -117,6 +185,7 @@ nav>.denusynlig {
 
 nav>.søkemotor {
   grid-column: span 1;
+  margin-top: 10px;
 }
 
 nav>.søkemotor>[type=text] {
@@ -133,27 +202,52 @@ nav>.søkemotor>[type=submit] {
   margin-right: 0px;
 }
 
-
-main{
-  background-color:#fff2ea;
-
-}
-
-.reklame1 {
-  height: 400px;
-  background-image: url(../bilder/logo.psd);
-  transition: 0.4s;
+main {
+  background-image: url(../bilder/stj_bak.jpg);
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  margin-top: 20px;
-  margin: 10px 0px;
+   background-attachment: fixed;
 }
 
-.reklame1:hover {
-  background-image: url(../bilder/united.jpg);
+
+
+
+
+.Hoved_grid {
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 28px;
+  font-weight: bold;
+  margin: 20px 50px;
+
 }
 
+.nr1 .nr2 .nr3 {}
+
+main>h1 {
+  color: lightgrey;
+  margin-left: 60px;
+  margin-top: 25px;
+  margin-bottom: 0px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+main>h2 {
+  margin-left: 90px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  margin-bottom: 0px;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: bold;
+}
 .herre_hoved {
   background-color: white;
   text-align: center;
@@ -171,4 +265,100 @@ grid-column: span 1
 }
 .grid_herre{
 grid-column: span 3
+}
+
+.herre_hoved:hover {
+  margin-top: 1px;
+}
+
+.bilde {
+  margin: 0px;
+  grid-column: span 1;
+  width: 100%;
+}
+
+.Merke {
+  font-style: normal;
+  font-family: sans-serif;
+  font-weight: bold;
+  text-transform: lowercase;
+  font-size: 19px;
+  text-align: left;
+  padding-left: 10px;
+}
+
+.navn {
+  font-style: normal;
+  font-family: sans-serif;
+  font-weight: lighter;
+  text-transform: lowercase;
+  padding: 2px;
+  font-size: 18px;
+  text-align: left;
+  padding-left: 10px;
+}
+
+.pris {
+  font-style: normal;
+  font-family: sans-serif;
+  font-weight: lighter;
+  text-transform: lowercase;
+  font-size: 18px;
+  text-align: left;
+  padding-left: 10px;
+}
+
+.nåpris {
+  color: red;
+  background-color: white;
+}
+
+.førpris {
+  text-decoration: line-through;
+  color: grey;
+  background-color: white;
+}
+
+.reklame2 {
+  height: 300px;
+  background-image: url(../bilder/logo.psd);
+  transition: 0.4s;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin-top: 20px;
+  margin: 0px 0px;
+}
+
+.reklame2:hover {
+  background-image: url(../bilder/united.jpg);
+}
+
+.hele_footer {
+  background-color: black;
+  color: white;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: normal;
+  padding: 30px 100px;
+}
+.sosbilder{
+  width: 40px;
+  height: 40px;
+  border-radius: 15px;
+  margin: 15px;
+}
+
+thead {
+  text-decoration: underline;
+  font-size: 18px;
+}
+tbody{
+  font-style: normal;
+  font-size: 12px;
+  font-family: monospace;
+  font-weight: lighter;
+  text-transform: lowercase;
 }
