--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/a HERRE/herre.css
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/a HERRE/herre.css
@@ -237,12 +237,24 @@ main>h1 {
   font-weight: bold;
 }
 
-main>h2 {
+main>h2, h2 {
   margin-left: 90px;
   margin-top: 5px;
   margin-bottom: 15px;
   margin-bottom: 0px;
   color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+h3 {
+  margin-left: 90px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  margin-bottom: 0px;
+  color: black;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 20px;
@@ -267,7 +279,7 @@ grid-column: span 1
 grid-column: span 3
 }
 
-.herre_hoved:hover {
+._index:hover {
   margin-top: 1px;
 }
 
