--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/main.css
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/main.css
@@ -63,14 +63,11 @@ header>.lenke {
   margin-left: 50px;
 }
 
-
 header>.lenke>a {
   color: black;
   text-decoration: none;
   padding: 4px;
 }
-
-
 
 header>.lenke>a:hover {
   color: darkgrey;
@@ -208,9 +205,7 @@ main {
   background-attachment: fixed;
 }
 
-
-
-.under_nav{
+.under_nav {
   text-align: center;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -219,37 +214,38 @@ main {
   font-size: 20px;
   font-weight: bold;
 }
+
 .women_get {
   background-color: salmon;
-color: white;
-padding:20px;
+  color: white;
+  padding: 20px;
 }
 
-.women_get>a, .Men_get>a{
+.women_get>a, .Men_get>a {
   color: white;
   text-decoration: none;
 }
 
-.Men_get{
-background-color:blue;
-color: white;
-padding: 20px;
+.Men_get {
+  background-color: blue;
+  color: white;
+  padding: 20px;
 }
-.women_get:hover{
+
+.women_get:hover {
   transition-duration: 500ms;
   background-color: pink
 }
 
-.Men_get:hover{
+.Men_get:hover {
   transition-duration: 500ms;
   background-color: lightblue;
 }
 
-.reklame1>a>img{
+.reklame1>a>img {
   width: 100%;
-height: 400px;
+  height: 400px;
 }
-
 
 .Hoved_grid {
   text-align: center;
@@ -358,6 +354,25 @@ main>.nyheter_hoved {
   background-color: white;
 }
 
+.brands {
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  background-color: #fff2ea;
+  margin: 5px 50px;
+  padding: 25px;
+}
+
+.brand_overskrift {
+  color: white;
+  margin: 10px 50px;
+  margin-top: 60px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 28px;
+  font-weight: bold;
+}
+
 .reklame2 {
   height: 300px;
   background-image: url(bilder/logo.psd);
@@ -417,7 +432,7 @@ h3 {
 }
 
 .herre_hoved {
-  background-color: white;
+
   text-align: center;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -483,18 +498,24 @@ h3 {
 
 .tabell_full {
   grid-row: span 4;
+
 }
 
 .Klær_tekst {
   color: black;
   text-decoration: none;
   padding-left: 10px;
+
+
 }
 
 .tabell_halv {
   list-style-type: none;
   text-align: left;
+
+
 }
+
 
 .tabell_ord {
   text-decoration: none;
@@ -510,3 +531,54 @@ h3 {
   text-decoration: underline;
   color: grey;
 }
+.valg_klær{
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: bold;
+  margin: 10px 50px;
+  background-color: #fff2ea;
+}
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
