--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/main.css
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/main.css
@@ -247,6 +247,8 @@ main {
   height: 400px;
 }
 
+
+
 .Hoved_grid {
   text-align: center;
   display: grid;
@@ -376,12 +378,11 @@ main>.nyheter_hoved {
 .reklame2 {
   height: 300px;
   background-image: url(bilder/logo.psd);
-  transition: 0.4s;
+  transition: 0.8s;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  margin-top: 20px;
-  margin: 0px 0px;
+
 }
 
 .reklame2:hover {
@@ -397,6 +398,10 @@ main>.nyheter_hoved {
   font-size: 14px;
   font-weight: normal;
   padding: 30px 100px;
+}
+td>a{
+  text-decoration: none;
+  color: white;
 }
 
 .sosbilder {
@@ -542,43 +547,10 @@ h3 {
   margin: 10px 50px;
   background-color: #fff2ea;
 }
-.dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
 
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-}
 
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
+.knapp2{
+  border: 1px solid;
+  border-radius: 5px;
+  padding:4px 20px;
 }
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
