--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/main.css
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/main.css
@@ -193,7 +193,6 @@ nav>.søkemotor>[type=submit] {
   display: block;
   text-align: left;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-
 }
 
 .dropned-content a:hover {
@@ -275,8 +274,8 @@ nav>.søkemotor>[type=submit] {
   margin: 20px 50px;
 }
 
-.nr1 .nr2 .nr3 {
-  margin: 20px 50px;
+.nr1, .nr2, .nr3 {
+  margin: 0px 10px;
 }
 
 .H1 {
@@ -301,6 +300,7 @@ nav>.søkemotor>[type=submit] {
   font-size: 20px;
   font-weight: bold;
 }
+
 
 main>.nyheter_hoved {
   text-align: center;
@@ -336,7 +336,7 @@ main>.nyheter_hoved {
   text-transform: lowercase;
   font-size: 19px;
   text-align: left;
-  padding-left: 10px;
+  padding-left: 15px;
 }
 
 .navn {
@@ -347,7 +347,7 @@ main>.nyheter_hoved {
   padding: 2px;
   font-size: 18px;
   text-align: left;
-  padding-left: 10px;
+  padding-left: 15px;
 }
 
 .pris {
@@ -357,8 +357,9 @@ main>.nyheter_hoved {
   text-transform: lowercase;
   font-size: 18px;
   text-align: left;
-  padding-left: 10px;
+  padding-left: 15px;
 }
+
 
 .nåpris {
   color: red;
@@ -379,9 +380,9 @@ main>.nyheter_hoved {
   margin: 5px 50px;
   padding: 25px;
 }
-.brand_enogalle:hover{
-padding-top: 5px;
 
+.brand_enogalle:hover {
+  padding-top: 5px;
 }
 
 .brand_overskrift {
@@ -402,11 +403,6 @@ padding-top: 5px;
   background-position: center;
   background-size: cover;
 }
-
-
-
-
-
 
 .hele_footer {
   background-color: black;
@@ -444,10 +440,9 @@ tbody {
   text-transform: lowercase;
 }
 
-<!--Index slutt-->
+< !--Index slutt-->
 
-<!--Herre start-->
-
+/*Herre klær start*/
 h3 {
   margin-left: 90px;
   margin-top: 5px;
@@ -460,11 +455,8 @@ h3 {
   font-weight: bold;
 }
 
-
-
-
 .herre_hoved {
-  text-align: center;
+
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   text-decoration: none;
@@ -557,30 +549,61 @@ h3 {
   color: grey;
 }
 
-<!--Herre slutt-->
-<!--klær herre start-->
-
-.valg_klær1 {
+.velge_herre_klær{
   text-align: center;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 18px;
-  font-weight: bold;
-  margin: 10px 50px;
+  grid-template-columns: repeat(2, 1fr);
   background-color: #fff2ea;
+  margin: 5px 50px;
+  padding: 25px;
+}
+.alle_4{
+margin: 20px;
+}
+
+  .alle_4>a{
+
+width: 50%;
+align-items: center;
+  }
+.alle_4>a>img{
+width: 70%;
+
+align-items: center;
+}
+
+
+/*Herre slutt*/
+/*klær herre start*/
+.h1_over{
+  background-color: #fff2ea;
+  font-size: 40px;
+  margin: 0px 50px;
+  margin-top: 25px;
+  margin-left: 50px;
+  margin-right: 50px;
+  padding: 25px;
+  text-align: center;
+  border-color: black;
+}
+
+.valg_klær1 {
+  display: grid;
+  background-color: #fff2ea;
+  grid-template-columns: repeat(5, 1fr);
+    margin: 0px 50px;
+  padding: 25px;
 }
 
 .knapp2 {
   border: 1px solid;
   border-radius: 5px;
-  padding: 4px 20px;
-  height: 100%
+  padding: 4px 40px;
+  height: 40px;
+  font-size: 18px;
 }
 
 .custom-select {
-
   font-family: Arial;
 }
 
@@ -590,17 +613,6 @@ h3 {
 
 .select-selected {
   background-color: DodgerBlue;
-}
-
-.select-selected:after {
-  position: absolute;
-  content: "";
-  top: 14px;
-  right: 10px;
-  width: 0;
-  height: 0;
-  border: 6px solid transparent;
-  border-color: #fff transparent transparent transparent;
 }
 
 .select-selected.select-arrow-active:after {
@@ -625,7 +637,6 @@ h3 {
   z-index: 99;
 }
 
-/*hide the items when the select box is closed:*/
 .select-hide {
   display: none;
 }
@@ -633,4 +644,146 @@ h3 {
 .select-items div:hover, .same-as-selected {
   background-color: rgba(0, 0, 0, 0.1);
 }
-<!--klær herre start-->
+
+/*klær herre slutt*/
+
+/*Plagg start*/
+
+
+.herre_hoved_plagg{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+padding-top: 30px;
+  background-color: #fff2ea;
+  padding-bottom: 50px;
+}
+
+.hoved_plagg{
+grid-column: span 2;
+grid-row: span 2;
+}
+
+.Stort_bilde{
+  width: 80.5%;
+  margin-left: 80px;
+  margin-right: 0px;
+
+
+}
+
+.plaggbilde2{
+
+grid-row: span 1;
+grid-column: span 1;
+}
+
+.lite_bilde1{
+width: 80%;
+
+}
+
+
+
+.plaggbilde3{
+
+  grid-row: span 1;
+  grid-column: span 1;
+
+}
+
+.lite_bilde2{
+width: 80%;
+
+}
+.velge_ting_plagg{
+width: 100%;
+background-color: #ccffff
+grid-row: span 1;
+grid-column: span 1;
+}
+
+/*logg inn del.loggg */
+
+.logginn_side{
+  background-color: grey;
+  text-align: center;
+}
+.Merke2{
+font-size: 30px;
+padding-top: 50px;
+font-family: monospace;
+font-style: normal;
+text-decoration: underline;
+margin-bottom: 20px;
+}
+.navn2{
+padding: 5px;
+font-size: 20px;
+margin-bottom: 10px;
+}
+
+.pris2, .nåpris2, .førpris2{
+  font-size: 28px;
+  margin: 10px 0px;
+}
+
+.pris2 {
+  font-style: normal;
+  font-family: sans-serif;
+  font-weight: lighter;
+  text-transform: lowercase;
+
+  text-align: left;
+  padding-left: 15px;
+}
+
+
+.nåpris2 {
+  color: red;
+  background-color: #fff2ea;
+}
+
+.førpris2 {
+  text-decoration: line-through;
+  color: grey;
+  background-color:.pris {
+    font-style: normal;
+    font-family: sans-serif;
+    font-weight: lighter;
+    text-transform: lowercase;
+    font-size: 18px;
+    text-align: left;
+    padding-left: 15px;
+  }
+
+
+  .nåpris {
+    color: red;
+    background-color: #fff2ea;
+  }
+
+  .førpris {
+    text-decoration: line-through;
+    color: grey;
+    background-color: #fff2ea;
+  }
+
+
+
+
+.bokser{
+width: 80%;
+padding-top: 7px;
+margin: 10px;
+border-radius: 0px;
+height: 50px;
+font-size: 20px;
+
+}
+.handlekurv_knapp{
+border-radius: 0px;
+padding: 20px;
+margin-top: 10px;
+width: 80%;
+font-size: 30px;
+}
