--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/main.css
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/main.css
@@ -61,6 +61,7 @@ header>.lenke {
   padding-bottom: 2px;
   grid-column: span 1;
   margin-left: 50px;
+
 }
 
 header>.lenke>a {
@@ -253,10 +254,10 @@ nav>.søkemotor>[type=submit] {
   margin-right: 60px;
   height: 500px;
   background-image: url(bilder/hoved_bilde_reklame.psd);
-  transition: 0.8s;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+    transition: all ease-in-out 1s;
 }
 
 .reklame1:hover {
@@ -290,15 +291,16 @@ nav>.søkemotor>[type=submit] {
 }
 
 .H2 {
-  margin-left: 90px;
-  margin-top: 5px;
-  margin-bottom: 15px;
   margin-bottom: 0px;
-  color: white;
+  color: black;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 40px;
   font-weight: bold;
+  text-align: center;
+  background-color: #fff2ea;
+  margin: 0 50px;
+  padding-bottom: 10px;
 }
 
 
@@ -310,9 +312,17 @@ main>.nyheter_hoved {
   text-transform: uppercase;
   font-size: 28px;
   font-weight: bold;
-  margin: 10px 50px;
+  margin: 0px 50px;
   background-color: #fff2ea;
 }
+
+
+._index:hover , .nyheter_index:hover{
+  -moz-box-shadow: 0 0 20px black;
+  		-webkit-box-shadow: 0 0 10px black;
+  		box-shadow: 0 0 10px black;
+  	}
+
 
 .nyheter_index {
   grid-column: span 1;
@@ -415,6 +425,11 @@ main>.nyheter_hoved {
   padding: 30px 100px;
 }
 
+th>a{
+  text-decoration: none;
+  color: white;
+}
+
 td>a {
   text-decoration: none;
   color: white;
@@ -429,12 +444,12 @@ td>a {
 
 thead {
   text-decoration: underline;
-  font-size: 18px;
+  font-size: 28px;
 }
 
 tbody {
   font-style: normal;
-  font-size: 12px;
+  font-size: 18px;
   font-family: monospace;
   font-weight: lighter;
   text-transform: lowercase;
@@ -521,6 +536,7 @@ h3 {
 
 .tabell_full {
   grid-row: span 4;
+  grid-column: span 0.8;
 }
 
 .Klær_tekst {
@@ -552,23 +568,16 @@ h3 {
 .velge_herre_klær{
   text-align: center;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  background-color: #fff2ea;
+  grid-template-columns: repeat(4, 1fr);
+
   margin: 5px 50px;
   padding: 25px;
 }
-.alle_4{
-margin: 20px;
-}
 
-  .alle_4>a{
 
-width: 50%;
-align-items: center;
-  }
 .alle_4>a>img{
-width: 70%;
-
+width: 95%;
+margin: 10px;
 align-items: center;
 }
 
@@ -577,7 +586,7 @@ align-items: center;
 /*klær herre start*/
 .h1_over{
   background-color: #fff2ea;
-  font-size: 40px;
+  font-size: 50px;
   margin: 0px 50px;
   margin-top: 25px;
   margin-left: 50px;
@@ -585,6 +594,7 @@ align-items: center;
   padding: 25px;
   text-align: center;
   border-color: black;
+  text-transform: uppercase;
 }
 
 .valg_klær1 {
@@ -604,6 +614,7 @@ align-items: center;
 }
 
 .custom-select {
+
   font-family: Arial;
 }
 
@@ -697,9 +708,10 @@ width: 80%;
 }
 .velge_ting_plagg{
 width: 100%;
-background-color: #ccffff
+background-color: #e6e6e6;
 grid-row: span 1;
 grid-column: span 1;
+text-align: center;
 }
 
 /*logg inn del.loggg */
@@ -724,7 +736,7 @@ margin-bottom: 10px;
 
 .pris2, .nåpris2, .førpris2{
   font-size: 28px;
-  margin: 10px 0px;
+  margin: 15px 10px;
 }
 
 .pris2 {
@@ -746,7 +758,9 @@ margin-bottom: 10px;
 .førpris2 {
   text-decoration: line-through;
   color: grey;
-  background-color:.pris {
+  background-color: #fff2ea;
+}
+.pris{
     font-style: normal;
     font-family: sans-serif;
     font-weight: lighter;
@@ -755,20 +769,6 @@ margin-bottom: 10px;
     text-align: left;
     padding-left: 15px;
   }
-
-
-  .nåpris {
-    color: red;
-    background-color: #fff2ea;
-  }
-
-  .førpris {
-    text-decoration: line-through;
-    color: grey;
-    background-color: #fff2ea;
-  }
-
-
 
 
 .bokser{
@@ -785,5 +785,8 @@ border-radius: 0px;
 padding: 20px;
 margin-top: 10px;
 width: 80%;
-font-size: 30px;
+font-size: 20px;
+margin: 10px;
 }
+
+a:active  { color: purple; }
