--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/virker_ikke.css
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/virker_ikke.css
@@ -10,15 +10,17 @@ h1 {
   font-weight: 100;
   font-size: 60px;
   margin: 10px 0px 20px;
-  padding: 60px;
+  padding: 20px;
   text-decoration: underline;
   font-weight: bold;
 }
 
 h2 {
-  padding-top: 20px;
   text-decoration: underline;
-  color: black;
+  color:white;
+  font-size: 40px;
+  padding: 0px;
+  margin: 0px;
 }
 
 #clockdiv {
